<resources>
    <string name="app_name">DATN</string>

    <string name="login">Đăng nhập</string>
    <string name="login_with_gg">Tiếp tục với Google</string>
    <string name="logout">Đăng xuất</string>
    <string name="register">Đăng ký</string>
    <string name="content_login">Vui lòng nhập thông tin của bạn dưới đây</string>
    <string name="content_logout">Bạn có muốn đăng xuất?</string>
    <string name="content_register">Đăng ký bây giờ để bắt đầu khám phá!</string>
    <string name="acc_sdt">Tên đăng nhập / SĐT</string>
    <string name="account">Tên đăng nhập</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="pass">Mật khẩu</string>
    <string name="re_pass">Nhập lại mật khẩu</string>
    <string name="remember">Ghi nhớ tôi</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="no_acc">Không có tài khoản?</string>
    <string name="already_acc">Đã có tài khoản?</string>
    <string name="terms_of_service"><u>Điều khoản dịch vụ</u></string>
    <string name="agree">Tôi đồng ý với</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="personal">Cá nhân</string>
    <string name="cart">Giỏ hàng</string>

    <string name="or">hoặc</string>
    <string name="shopcuatoi">Shop của tôi </string>
    <string name="buy">Mua hàng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="sum_price">Tổng thanh toán</string>
    <string name="bill">Đơn mua</string>
    <string name="buy_history">Lịch sử mua hàng</string>
    <string name="select_all">Tất cả</string>
    <string name="wait_confirm">Chờ xác nhận</string>
    <string name="wait_deli">Chờ lấy hàng</string>
    <string name="deli">Đang giao</string>
    <string name="refund">Hoàn tiền</string>
    <string name="view_shop">Xem shop</string>
    <string name="new_product">Sản phẩm mới nhất</string>
    <string name="my_gadget">Tiện ích của tôi</string>
    <string name="my_voucher">Voucher của tôi</string>
    <string name="start_sell">Bắt đầu bán</string>
    <string name="view_history">Đã xem gần đây</string>
    <string name="setting_user">Thiết lập tài khoản</string>
    <string name="free_register">Đăng ký miễn phí</string>
    <string name="type_account">Loại tài khoản</string>
    <string name="follow">Đang theo dõi:</string>
    <string name="followed">Người theo dõi:</string>
    <string name="slash">/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_text"><u>đ</u></string>

</resources>