<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_15sdp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/img_icon_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_not_text" />

    <TextView
        android:id="@+id/tv_screen_login"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_icon_app"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_content_login"
        style="@style/ContainerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_screen_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/content_login" />


    <LinearLayout
        android:id="@+id/ll_view_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_content_login"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_4sdp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/grayLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/or"
            android:textColor="@color/grayLight" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/grayLight" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_form_acc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_view_margin"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/gray"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_acc"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acc_sdt"
            android:padding="@dimen/_16sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_form_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_form_acc"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/gray"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass"
            style="@style/InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="@dimen/_16sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvFogetPass"
        android:layout_below="@+id/til_form_pass"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:text="  Quên mật khẩu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_form_pass"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_border_40"
        android:gravity="center"
        android:padding="@dimen/_14sdp"
        android:text="@string/login"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_18sdp">

        <TextView
            style="@style/SupportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_acc" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/register" />

    </LinearLayout>

</RelativeLayout>