<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="false"
    tools:context=".activity.DetailProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/iv_image_product"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="center"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@android:color/black" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_name"
                style="@style/NameProductText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramedium"
                android:padding="@dimen/_8sdp"
                android:text="Vải thiều bắc giang" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/NameProductText"
                android:text="10000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tv_slash"
                style="@style/NameProductText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:padding="@dimen/_8sdp"
                android:layout_toEndOf="@+id/tv_price"
                android:text="@string/slash"
                android:visibility="invisible"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tv_unit"
                style="@style/HeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:padding="@dimen/_8sdp"
                android:layout_toEndOf="@+id/tv_slash"
                android:textColor="@color/red" />

            <RelativeLayout
                android:id="@+id/rlShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_price"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_stroke_border_20"
                android:backgroundTint="@color/greenLight"
                android:padding="@dimen/_10sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/avatar_empty" />

                <LinearLayout
                    android:id="@+id/ll_info_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/ivAvatar"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name_shop"
                        style="@style/ContentText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxWidth="@dimen/_100sdp"
                        android:maxLines="2"
                        android:text="svvvvvvvvvv"
                        android:textColor="@color/green"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_is_online"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:backgroundTint="@color/green"
                        android:gravity="center" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_view_shop"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/bg_stroke_border_20"
                    android:backgroundTint="@color/green"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/view_shop"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_new_product"
                style="@style/ContainerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlShop"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/new_product"
                 />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductByStoreId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_new_product"
                android:layout_marginTop="9dp"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/rvProductByStoreId"
                >
                <TextView
                    android:text="Chi tiết sản phẩm"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_height="wrap_content"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:text="Số lượng"
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/tvQuantity"
                        android:text="100"
                        android:layout_weight="7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:text="Phân loại"
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/tvCategory"
                        android:text="100"
                        android:layout_weight="7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>


                <TextView
                    android:text="Mô tả"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    />
                <TextView
                    android:id="@+id/tvDescription"
                    android:text="mô tả"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_1sdp"
            android:background="@color/greenLight"
            android:src="@drawable/ic_chat" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnAddCart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/greenLight"
            android:layout_marginEnd="@dimen/_1sdp"
            android:src="@drawable/ic_add_cart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBuy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/green"
            android:textAllCaps="false"
            android:text="@string/buy_now"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/arrow_left" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>
